<resources>
    <string name="app_name">M3 Player</string>
    <string name="album_artwork">album artwork</string>
    <string name="play_control">play control</string>
    <string name="next_song">next song</string>
    <string name="prev_song">previous song</string>
    <string name="playback_progress">playback progress of the song</string>
    <string name="more">more</string>
    <string name="err_hint">An error occurs(╥_╥)</string>
    <string name="retry">retry</string>
    <string name="loading">loading…</string>
    <string name="play_ui_tabs">switch pages</string>
    <string name="lists">lists</string>
    <string name="unknown_list">unknown list</string>
    <string name="unknown_song">unknown song</string>
    <string name="play">play</string>
    <string name="lyric">lyric</string>
    <string name="playlist">playlist</string>
    <string name="play_modes">switch play modes</string>
    <string name="library">library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open drawer</string>
</resources>