<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    tools:showIn="@layout/activity_main">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/home_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="?attr/actionBarSize">
        <com.google.android.material.tabs.TabLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_ui_tabs"
            android:layout_gravity="center"
            app:tabIndicator="null"
            app:tabGravity="center"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lists"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lyric"
                />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_bottom_appbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_bottom_appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.slider.Slider
            android:id="@+id/home_slider_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/playback_progress"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toTopOf="@+id/home_cb_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:value=".5" />

        <Button
            android:id="@+id/home_btn_prev"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prev_song"
            android:padding="0dp"
            app:icon="@drawable/ic_prev"
            app:iconSize="@dimen/small_size"
            app:layout_constraintBottom_toBottomOf="@+id/home_cb_play"
            app:layout_constraintEnd_toStartOf="@+id/home_cb_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_cb_play" />

        <Button
            android:id="@+id/home_btn_next"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_song"
            android:padding="0dp"
            app:icon="@drawable/ic_next"
            app:iconSize="@dimen/small_size"
            app:layout_constraintBottom_toBottomOf="@+id/home_cb_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_cb_play"
            app:layout_constraintTop_toTopOf="@+id/home_cb_play" />

        <CheckBox
            android:id="@+id/home_cb_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/sl_play_control"
            android:contentDescription="@string/play"
            app:buttonTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_btn_next"
            app:layout_constraintStart_toEndOf="@+id/home_btn_prev"
            app:layout_constraintTop_toBottomOf="@+id/home_slider_progress" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>